--- a/app/src/main/res/layout-land/fragment_movies.xml
+++ b/app/src/main/res/layout-land/fragment_movies.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <GridView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/grid_movies"
@@ -5,6 +6,6 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:horizontalSpacing="0dp"
-    android:numColumns="2"
+    android:numColumns="3"
     android:stretchMode="columnWidth"
     android:verticalSpacing="0dp" />
