--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/grid_movies_land"
         />
 
-    <View android:background="#FF0000"
+    <View android:background="#000000"
         android:layout_height="wrap_content"
         android:layout_width="1dp"
         />
