--- a/app/src/main/res/menu/movies.xml
+++ b/app/src/main/res/menu/movies.xml
@@ -14,4 +14,9 @@
         android:title="@string/top_rated"
         app:showAsAction="never"
         android:orderInCategory="101"/>
+    <item
+        android:id="@+id/menu_favorite"
+        android:title="@string/favorite"
+        app:showAsAction="never"
+        android:orderInCategory="101"/>
 </menu>
