--- a/app/src/main/res/layout-port/fragment_detail.xml
+++ b/app/src/main/res/layout-port/fragment_detail.xml
@@ -1,73 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detail_fragment"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/colorDetailBackground">
 
-        <TextView
-            android:id="@+id/text_header_title"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="#0b8070"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:shadowColor="#323232"
-            android:text="Mad Max"
-            android:textColor="#FFFFFF"
-            android:textSize="25dp" />
+            android:layout_below="@+id/detail_header"
+            android:minHeight="300dp">
 
-        <ImageView
-            android:id="@+id/image_movie"
-            android:layout_width="120dp"
-            android:layout_height="180dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/text_header_title"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="55dp"
-            android:background="#000000"
-            android:scaleType="fitCenter"
-            android:transitionName="posterTransition" />
+            <RelativeLayout
+                android:id="@+id/detail_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent">
 
-        <TextView
-            android:id="@+id/text_release_year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/image_movie"
-            android:layout_centerHorizontal="true"
-            android:autoText="true"
-            android:clickable="false"
-            android:text="2016"
-            android:textSize="18dp"
-            android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/background_header_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#000000" />
+            </RelativeLayout>
 
-        <TextView
-            android:id="@+id/text_votes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/text_release_year"
-            android:layout_below="@+id/text_release_year"
-            android:layout_marginTop="10dp"
-            android:text="8.1/10" />
+            <TextView
+                android:id="@+id/text_header_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:shadowColor="#323232"
+                android:text="Mad Max"
+                android:textColor="#FFFFFF"
+                android:layout_margin="15dp"
+                android:textSize="25dp"
+                android:layout_below="@+id/detail_header"
+                android:layout_alignParentStart="true" />
 
-        <TextView
-            android:id="@+id/text_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/image_movie"
-            android:layout_below="@+id/image_movie"
-            android:layout_marginTop="15dp"
-            android:lines="4"
-            android:text="adfihj ijwojasj fwie faijfaso;hfsofns ofhsojf sjfishfow fiahsfoijsofhsfhwefj awjfp oja sfjafjwehfo f'aspfjowiejfo"
-            android:textSize="12dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="15dp" />
+            <ImageView
+                android:id="@+id/image_movie"
+                android:layout_width="120dp"
+                android:layout_height="180dp"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/text_header_title"
+                android:layout_marginStart="25dp"
+                android:background="#000000"
+                android:scaleType="fitCenter"/>
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/text_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignStart="@+id/image_movie"
+                android:layout_below="@+id/image_movie"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/colorDetailText"
+                android:lines="4"
+                android:text="adfihj ijwojasj fwie faijfaso;hfsofns ofhsojf sjfishfow fiahsfoijsofhsfhwefj awjfp oja sfjafjwehfo f'aspfjowiejfo"
+                android:textSize="13dp" />
+
+            <TextView
+                android:id="@+id/text_release_year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:text="2016"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorDetailText"
+                android:layout_alignTop="@+id/image_movie"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/text_votes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="8.1/10"
+                android:textColor="@color/colorDetailText"
+                android:layout_below="@+id/text_release_year"
+                android:layout_alignStart="@+id/text_release_year" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Button"
+                android:layout_alignStart="@+id/text_votes"
+                android:layout_below="@id/text_votes"/>
+
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview_review_carousel"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp"
+                android:layout_weight="1" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview_trailer_carousel"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+    </LinearLayout>
 </ScrollView>
