--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,72 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detail_fragment"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:orientation="vertical">
+    <TextView
+        android:id="@+id/textview_review_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reviews" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true"
-        android:background="#ffffff">
+    <include layout="@layout/review_carousel" />
 
-        <TextView
-            android:id="@+id/text_header_title"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="#0b8070"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:shadowColor="#323232"
-            android:text="Select a movie"
-            android:textColor="#FFFFFF"
-            android:textSize="25dp" />
 
-        <ImageView
-            android:id="@+id/image_movie"
-            android:layout_width="180dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="27dp"
-            android:background="#f4f4f4"
-            android:scaleType="fitCenter"
-            android:layout_below="@+id/text_header_title"
-            android:layout_alignParentStart="true" />
+    <TextView
+        android:id="@+id/textview_trailer_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Trailers" />
 
-        <TextView
-            android:id="@+id/text_release_year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoText="true"
-            android:clickable="false"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:layout_alignTop="@+id/image_movie"
-            android:layout_toEndOf="@+id/image_movie"
-            android:layout_marginStart="31dp" />
+    <include layout="@layout/trailer_carousel" />
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="#ffffff"-->
+        <!--android:clickable="true">-->
 
-        <TextView
-            android:id="@+id/text_votes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/text_release_year"
-            android:layout_alignStart="@+id/text_release_year"
-            android:layout_marginTop="15dp" />
+        <!--<TextView-->
+            <!--android:id="@+id/text_header_title"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:background="#0b8070"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+            <!--android:shadowColor="#323232"-->
+            <!--android:text="Select a movie"-->
+            <!--android:textColor="#FFFFFF"-->
+            <!--android:textSize="25dp" />-->
 
-        <TextView
-            android:id="@+id/text_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:lines="4"
-            android:textSize="11dp"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/image_movie"
-            android:layout_alignStart="@+id/image_movie"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp" />
+        <!--<ImageView-->
+            <!--android:id="@+id/image_movie"-->
+            <!--android:layout_width="180dp"-->
+            <!--android:layout_height="120dp"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_below="@+id/text_header_title"-->
+            <!--android:layout_marginStart="24dp"-->
+            <!--android:layout_marginTop="27dp"-->
+            <!--android:background="#f4f4f4"-->
+            <!--android:scaleType="fitCenter" />-->
 
-    </RelativeLayout>
-</ScrollView>
+        <!--<TextView-->
+            <!--android:id="@+id/text_release_year"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignTop="@+id/image_movie"-->
+            <!--android:layout_marginStart="31dp"-->
+            <!--android:layout_toEndOf="@+id/image_movie"-->
+            <!--android:autoText="true"-->
+            <!--android:clickable="false"-->
+            <!--android:textSize="18dp"-->
+            <!--android:textStyle="bold" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/text_votes"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignStart="@+id/text_release_year"-->
+            <!--android:layout_below="@+id/text_release_year"-->
+            <!--android:layout_marginTop="15dp" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/text_desc"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_alignStart="@+id/image_movie"-->
+            <!--android:layout_below="@+id/image_movie"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:lines="4"-->
+            <!--android:textSize="11dp" />-->
+
+        <!--<Button-->
+            <!--android:id="@+id/favorite_btn"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignBottom="@+id/text_votes"-->
+            <!--android:layout_alignEnd="@+id/text_desc"-->
+            <!--android:layout_marginEnd="19dp"-->
+            <!--android:text="Button" />-->
+
+    <!--</RelativeLayout>-->
+
+
+
+</LinearLayout>
+
+    <!--<NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:id="@+id/detail_fragment"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content">-->
