Adding to favorites working end-to-end.

--- a/app/src/main/res/layout-port/fragment_detail.xml
+++ b/app/src/main/res/layout-port/fragment_detail.xml
@@ -36,11 +36,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:layout_margin="@dimen/activity_horizontal_margin"
                 android:shadowColor="#323232"
                 android:text="Mad Max"
-                android:textColor="#FFFFFF"
-                android:layout_margin="15dp"
+                android:textColor="@color/colorDetailMovieTitle"
                 android:textSize="25dp"
                 android:layout_below="@+id/detail_header"
                 android:layout_alignParentStart="true" />
@@ -49,9 +48,8 @@
                 android:id="@+id/image_movie"
                 android:layout_width="120dp"
                 android:layout_height="180dp"
-                android:layout_alignParentStart="true"
                 android:layout_below="@id/text_header_title"
-                android:layout_marginStart="25dp"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:background="#000000"
                 android:scaleType="fitCenter"/>
 
@@ -60,14 +58,56 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_alignStart="@+id/image_movie"
                 android:layout_below="@+id/image_movie"
-                android:layout_marginRight="15dp"
                 android:layout_marginTop="15dp"
                 android:textColor="@color/colorDetailText"
                 android:lines="4"
                 android:text="adfihj ijwojasj fwie faijfaso;hfsofns ofhsojf sjfishfow fiahsfoijsofhsfhwefj awjfp oja sfjafjwehfo f'aspfjowiejfo"
-                android:textSize="13dp" />
+                android:textSize="14dp" />
+
+            <RatingBar
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/text_release_year"
+                android:layout_alignStart="@+id/text_release_year"
+                android:id="@+id/ratingBar"
+                android:numStars="5"
+                android:stepSize="0.25"
+                android:layout_margin="5dp"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content" />
+
+            <TextView
+                android:id="@+id/text_votes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="8.1/10"
+                android:textColor="@color/colorDetailText"
+                android:layout_alignBaseline="@id/ratingBar"
+                android:layout_below="@+id/text_release_year"
+                android:layout_toRightOf="@id/ratingBar"
+                android:layout_marginEnd="35dp" />
+
+            <Button
+                android:id="@+id/favorite_btn"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="17dp"
+                android:background="@drawable/favorite_btn"
+                android:layout_below="@+id/text_votes"
+                android:layout_alignStart="@+id/ratingBar" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/favorite_btn"
+                android:layout_alignBaseline="@id/favorite_btn"
+                android:id="@+id/favorite_label"
+                android:textColor="@color/colorDetailText"
+                android:text="@string/add_to_favorite"
+                />
 
             <TextView
                 android:id="@+id/text_release_year"
@@ -79,24 +119,8 @@
                 android:textStyle="bold"
                 android:textColor="@color/colorDetailText"
                 android:layout_alignTop="@+id/image_movie"
-                android:layout_centerHorizontal="true" />
-
-            <TextView
-                android:id="@+id/text_votes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="8.1/10"
-                android:textColor="@color/colorDetailText"
-                android:layout_below="@+id/text_release_year"
-                android:layout_alignStart="@+id/text_release_year" />
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Button"
-                android:layout_alignStart="@+id/text_votes"
-                android:layout_below="@id/text_votes"/>
+                android:layout_toEndOf="@+id/image_movie"
+                android:layout_marginStart="15dp" />
 
 
         </RelativeLayout>
@@ -104,14 +128,34 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_alignParentStart="true"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textview_review_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/colorDetailTitle"
+                android:layout_margin="12dp"
+                android:textSize="16sp"
+                android:text="@string/reviews"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview_review_carousel"
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
                 android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textview_trailers_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorDetailTitle"
+                android:text="@string/trailers"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview_trailer_carousel"
