--- a/app/src/main/res/layout/trailer_card.xml
+++ b/app/src/main/res/layout/trailer_card.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
+    android:layout_width="180dp"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:elevation="3dp"
-    card_view:cardBackgroundColor="@color/cardview_light_background">
+    card_view:cardBackgroundColor="@color/colorCardBackground">
 
 
         <ImageView
             android:id="@+id/background_image"
-            android:layout_width="200dp"
+            android:layout_width="180dp"
+            android:background="@color/colorPrimaryDark"
             android:layout_height="wrap_content" />
 
         <ImageView
@@ -18,8 +19,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:alpha="0.3"
-            android:src="@drawable/ic_play_circle_outline_black_24dp" />
+            android:src="@drawable/ic_action_play" />
 
 
 </android.support.v7.widget.CardView>
