--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,10 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorDetailBackground">#27282d</color>
     <color name="colorDetailText">#dadee5</color>
-    <color name="colorDetailTitle">#dadee5</color>
+    <color name="colorDetailMovieTitle">#e1d3ab</color>
+    <color name="colorDetailTitle">#a39878</color>
+    <color name="colorCardBackground">#b0b3b7</color>
+    <color name="colorReviewTitle">#797b7c</color>
+    <color name="colorReviewBody">#535454</color>
+    <color name="colorLink">#478bf7</color>
 </resources>
