--- a/app/src/main/res/layout/review_card.xml
+++ b/app/src/main/res/layout/review_card.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorReviewTitle"
             android:orientation="horizontal">
 
             <ImageView
@@ -39,17 +39,18 @@
         <TextView
             android:id="@+id/textview_description_label"
             android:layout_width="270dp"
-            android:layout_height="150dp"
+            android:layout_height="145dp"
             android:maxLines="8"
             android:text="@string/no_reviews_yet"
             android:padding="5dp"
             />
         <TextView
             android:id="@+id/textview_review_url"
-            android:layout_width="300dp"
+            android:layout_width="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_height="wrap_content"
             android:textColor="@color/colorLink"
-            android:padding="7dp"
+            android:paddingLeft="7dp"
             android:text="View all"/>
     </LinearLayout>
 
